feat(dependency): update aspectj version and get rid of "add-opens"